# parallel-pawns

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Makefile  README.md  TODO.md
backend/: .env.example  package-lock.json  package.json  server.js  workers.conf
backend/engine/: uciEngine.js  uciParser.js
data/openings/: .gitignore  README.md
scripts/: deploy-worker.sh  install-worker.sh  parse-fastchess-telemetry.py  run-distributed-local.sh  run-distributed.sh  run-fastchess-batch.sh  run-fastchess.sh
src/engine/: Makefile  distributed_search.cpp  distributed_search.h  engine.cpp  engine.h  eval_constants.h  evaluation.h  geometry.cpp  geometry.h  main.cpp  move_gen_tables.h  position.cpp  position.h  pseudo.h  search.cpp  search.h  transposition_table.cpp  transposition_table.h  types.h  uciengine.cpp  uciengine.h  ucioption.cpp  ucioption.h  util.h  zobrist.cpp  zobrist.h
src/engine/move_gen/: attacks.h  attacks_leapers.h  attacks_sliders.h  checkers.h  generator.cpp  generator.h  magic_types.h  magics_generated.h
src/frontend/: index.html  main.jsx  package-lock.json  package.json
src/frontend/src/: App.jsx  main.jsx
src/frontend/src/components/: AnalysisPanel.jsx  ChessBoard.jsx
src/frontend/src/styles/: layout.css
tests/engine/: perft.cpp
tools/: find_magics.cpp
